@@ -6,4 +6,5 @@
 --add-opens=java.base/java.nio=ALL-UNNAMED
 --add-opens=java.base/java.util=ALL-UNNAMED
 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+--add-opens=java.base/sun.security.action=ALL-UNNAMED
 ```
